Use Sequelize ORM in Authentication microservice

--- a/auth/config/config.json
+++ b/auth/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "root",
-    "password": "test",
+    "username": "achraf",
+    "password": "Zizoafrape07!",
     "database": "medium",
     "host": "localhost",
     "dialect": "mysql"
