Creating env files for auth & articles API

--- a/auth/config/config.json
+++ b/auth/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "achraf",
-    "password": "Zizoafrape07!",
+    "password": "password",
     "database": "medium",
     "host": "localhost",
     "dialect": "mysql"
